--- a/robot/espressif/app/supervisor/Makefile
+++ b/robot/espressif/app/supervisor/Makefile
@@ -26,19 +26,9 @@ ESP_SRC_DIR:=../../../supervisor/src
 #
 #DEFINES +=
 
-CXXSRCS:=$(ESP_SRC_DIR)/animationController.cpp
+vpath %.cpp $(ESP_SRC_DIR)
 
-
-define MakeLibrary
-DEP_LIBS_$(1) = $$(foreach lib,$$(filter %.a,$$(COMPONENTS_$(1))),$$(dir $$(lib))$$(LIBODIR)/$$(notdir $$(lib)))
-DEP_OBJS_$(1) = $$(foreach obj,$$(filter %.o,$$(COMPONENTS_$(1))),$$(dir $$(obj))$$(OBJODIR)/$$(notdir $$(obj)))
-$$(LIBODIR)/$(1).a: $$(OBJS) $$(DEP_OBJS_$(1)) $$(DEP_LIBS_$(1)) $$(DEPENDS_$(1))
-	@mkdir -p $$(LIBODIR)
-	$$(if $$(filter %.a,$$?),mkdir -p $$(EXTRACT_DIR)_$(1))
-	$$(if $$(filter %.a,$$?),cd $$(EXTRACT_DIR)_$(1); $$(foreach lib,$$(filter %.a,$$?),$$(AR) xo $$(UP_EXTRACT_DIR)/$$(lib);))
-	$$(AR) ru $$@  $$(OBJODIR)/*.o
-	$$(if $$(filter %.a,$$?),$$(RM) -r $$(EXTRACT_DIR)_$(1))
-endef
+CXXSRCS:=animationController.cpp
 
 #############################################################
 # Recursion Magic - Don't touch this!!
