--- a/robot/Makefile
+++ b/robot/Makefile
@@ -11,12 +11,18 @@ ANKI_LOG_SRC_DIRS=supervisor/src k02_hal espressif/app sim_hal/
 VERSION_GENERATOR=tools/versionGenerator/versionGenerator.sh
 VERSION_HEADER=include/anki/cozmo/robot/version.h
 
-.PHONY: clean $(VERSION_HEADER)
+.PHONY: clean $(VERSION_HEADER) purgeAnkiLog verboseAnkiLog
 
 all: k02 esp sim
 
 $(ANKI_LOG_TABLE_JSON): $(ANKI_LOG_PP) $(shell /usr/bin/find $(ANKI_LOG_SRC_DIRS) -type f)
 	$(ANKI_LOG_PP) --preprocessor --string-table --output $@ $(ANKI_LOG_SRC_DIRS)
+
+purgeAnkiLog: $(ANKI_LOG_PP)
+	$(ANKI_LOG_PP) --purge --preprocessor --string-table --output $(ANKI_LOG_TABLE_JSON) $(ANKI_LOG_SRC_DIRS)
+	
+verboseAnkiLog: $(ANKI_LOG_PP)
+	$(ANKI_LOG_PP) -vvv --preprocessor --string-table --output $(ANKI_LOG_TABLE_JSON) $(ANKI_LOG_SRC_DIRS)
 
 $(VERSION_HEADER):
 	$(VERSION_GENERATOR) $@
