--- a/resources/config/basestation/config/mood_config.json
+++ b/resources/config/basestation/config/mood_config.json
@@ -63,6 +63,18 @@
             "name" : "OCD_PickupFail"
          }
       ]
-   }
+  },
+  "defaultRepetitionPenalty" : {
+    "nodes" : [
+      {
+        "x" : 0.0,
+        "y" : 0.0
+      },
+      {
+        "x" : 30.0,
+        "y" : 1.0
+      }
+    ]
+  }
 }
 
