Fix omitted clad generation in simulated robot build target.

--- a/robot/Makefile
+++ b/robot/Makefile
@@ -28,6 +28,7 @@ $(VERSION_HEADER):
 	$(VERSION_GENERATOR) $@
 
 sim: $(VERSION_HEADER) $(ANKI_LOG_TABLE_JSON)
+	make fourzero -C clad -j4
 
 k02: $(VERSION_HEADER) $(ANKI_LOG_TABLE_JSON)
 	make $@ -C clad -j4
