--- a/robot/robot41.uvprojx
+++ b/robot/robot41.uvprojx
@@ -557,6 +557,11 @@
               <FileType>8</FileType>
               <FilePath>.\k02_hal\hal\cube.cpp</FilePath>
             </File>
+            <File>
+              <FileName>spine.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\k02_hal\hal\spine.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -697,26 +702,15 @@
               <FileType>8</FileType>
               <FilePath>.\supervisor\src\proxSensors.cpp</FilePath>
             </File>
+            <File>
+              <FileName>testModeController.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\testModeController.cpp</FilePath>
+            </File>
           </Files>
-        </Group>
-        <Group>
-          <GroupName>::CMSIS</GroupName>
         </Group>
       </Groups>
     </Target>
   </Targets>
-
-  <RTE>
-    <apis/>
-    <components>
-      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="4.1.0" condition="CMSIS Core">
-        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="4.3.0"/>
-        <targetInfos>
-          <targetInfo name="robot"/>
-        </targetInfos>
-      </component>
-    </components>
-    <files/>
-  </RTE>
 
 </Project>
