Add C++ trace printer implementation for floats etc. Fixes to embedded side and python side.

--- a/robot/espressif/Makefile
+++ b/robot/espressif/Makefile
@@ -193,7 +193,8 @@ CCFLAGS += 			\
 	-ffunction-sections \
 	-fdata-sections \
 	-Wall \
-  -Werror
+  -Werror \
+	-Wno-strict-aliasing
 
 CXXFLAGS = -fno-threadsafe-statics 
 
