Fixes to latest trace changes and OTA * RTIP and WiFi OTA should be more reliable now * Some fixes to previous trace changes

--- a/robot/espressif/Makefile
+++ b/robot/espressif/Makefile
@@ -193,8 +193,7 @@ CCFLAGS += 			\
 	-ffunction-sections \
 	-fdata-sections \
 	-Wall \
-  -Werror \
-	-Wno-strict-aliasing
+	-Werror
 
 CXXFLAGS = -fno-threadsafe-statics 
 
