--- a/resources/config/basestation/config/mood_config.json
+++ b/resources/config/basestation/config/mood_config.json
@@ -24,7 +24,16 @@
                "y" : 0
             }
          ]
-      }
+      },
+     {
+       "emotionType": "WantToPlay",
+       "nodes": [
+         {
+           "x": 0,
+           "y": 1
+         }
+       ]
+     }
    ],
    "eventMapper" : {
       "emotionEvents" : [
