Add stub for das.version

--- a/unity/ios/Info.plist
+++ b/unity/ios/Info.plist
@@ -138,5 +138,7 @@
 	</array>
 	<key>Unity_LoadingActivityIndicatorStyle</key>
 	<integer>-1</integer>
+        <key>com.anki.das.version</key>
+        <string></string>
 </dict>
 </plist>
