--- a/resources/config/basestation/config/behavior_config.json
+++ b/resources/config/basestation/config/behavior_config.json
@@ -1,2 +1,20 @@
 {
+  "chooserConfig" :
+  {
+    // By default all behaviors are enabled, the following are then applied in order
+    // 1) anything belonging to a group in disabledGroups is disabled
+    // 2) anything belonging to a group in enabledGroups is re-enabled (to e.g. re-enable a subgroup disabled in 1)
+    // 3) anything belonging in disabledBehaviors is disabled (to e.g. disable a few specific behaviors)
+    // 4) anything belonging in enabledBehaviors is re-enabled (to e.g. re-enable a few specific behaviors)
+    
+    "disabledGroups" : [
+      "MiniGame"
+    ],
+    "enabledGroups" : [
+    ],
+    "disabledBehaviors" : [
+    ],
+    "enabledBehaviors" : [
+    ]
+  }
 }
