--- a/resources/config/basestation/config/mood_config.json
+++ b/resources/config/basestation/config/mood_config.json
@@ -33,6 +33,31 @@
            "y": 1
          }
        ]
+     },
+     {
+       "emotionType": "Social",
+       "nodes": [
+         {
+           "x": 0,
+           "y": 1
+         },
+         {
+           "x": 10,
+           "y": 1
+         },
+         {
+           "x": 20,
+           "y": 0.6
+         },
+         {
+           "x": 60,
+           "y": 0.2
+         },
+         {
+           "x": 100,
+           "y": 0
+         }
+       ]
      }
   ],
   "eventMapper" : {
