Added Al's new Webots tests! Updating engine pointer.

--- a/project/build-scripts/webots/webotsTests.cfg
+++ b/project/build-scripts/webots/webotsTests.cfg
@@ -14,3 +14,12 @@ world_file : buildServer.wbt
 
 [CST_RobotKidnapping]
 world_file : testWorldRobotKidnapping.wbt
+
+[CST_BasicActions]
+world_file : testWorldBasicActions.wbt
+
+[CST_ActionRetry]
+world_file : testWorldActionRetry.wbt
+
+[CST_DockActions]
+world_file : testWorldBasicActions.wbt
