--- a/resources/config/basestation/config/behavior_config.json
+++ b/resources/config/basestation/config/behavior_config.json
@@ -15,6 +15,31 @@
     "disabledBehaviors" : [
     ],
     "enabledBehaviors" : [
-    ]
+    ],
+    // For current behavior, X = time running, Y = bonus (can be -ve, to encourage switching away from a long-running behavior)
+    "scoreBonusForCurrentBehavior" : {
+      "nodes" : [
+        {
+          "x" : 2.0,
+          "y" : 2.0
+        },
+        {
+          "x" : 10.0,
+          "y" : 0.1
+        },
+        {
+          "x" : 60.0,
+          "y" : 0.0
+        },
+        {
+          "x" : 120.0,
+          "y" : 0.0
+        },
+        {
+          "x" : 240.0,
+          "y" : -0.5
+        }
+      ]
+    }
   }
 }
