Tweaking swich emitter so we don't have to make so many dumb stubs.

--- a/robot/clad/Makefile
+++ b/robot/clad/Makefile
@@ -24,6 +24,8 @@ OUTPUT_PYTHON=$(patsubst %.clad, %.py, $(INPUT_FILES))
 ENGINE_TO_ROBOT_UNION:=./clad/robotInterface/messageEngineToRobot
 ROBOT_TO_ENGINE_UNION:=./clad/robotInterface/messageRobotToEngine
 LIGHT_CUBE_UNION:=./clad/robotInterface/lightCubeMessage
+K02_START_TAG:=0x30
+K02_END_TAG:=0x7F
 
 vpath %.clad $(INPUT_DIR)
 vpath %.h $(OUTPUT_DIR)/robot/
@@ -48,6 +50,11 @@ python: $(OUTPUT_PYTHON)
 	if test -f $(OUTPUT_DIR)robot/$*_switch.def; then chmod -f 777 $(OUTPUT_DIR)robot/$*_switch.def; fi
 	python $(CLAD_CPP_SWITCH) -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)robot/ $*.clad
 	chmod -f 555 $(OUTPUT_DIR)robot/$*_switch.def
+
+%_switch_from_$(K02_START_TAG)_to_$(K02_END_TAG).def : %.clad $(CLAD_CPP_SWITCH)
+		if test -f $(OUTPUT_DIR)robot/$*_switch.def; then chmod -f 777 $(OUTPUT_DIR)robot/$*_switch.def; fi
+		python $(CLAD_CPP_SWITCH) --start=$(K02_START_TAG) --end=$(K02_END_TAG) -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)robot/ $*.clad
+		chmod -f 555 $(OUTPUT_DIR)robot/$*_switch.def
 
 %_declarations.def : %.clad $(CLAD_CPP_DECL)
 	if test -f $(OUTPUT_DIR)robot/$*_declarations.def; then chmod -f 777 $(OUTPUT_DIR)robot/$*_declarations.def; fi
@@ -77,7 +84,7 @@ cpplilib: cpp
 	cd $(OUTPUT_DIR); /usr/bin/find . -type f -iname '*.cpp' > cpps.list; awk '{ print "#include \"" $$0 "\"" }' <cpps.list >clad.cpp
 	@rm $(OUTPUT_DIR)cpps.list
 
-k02: cpplilib $(ENGINE_TO_ROBOT_UNION)_switch.def $(ENGINE_TO_ROBOT_UNION)_declarations.def $(ROBOT_TO_ENGINE_UNION)_send_helper.h $(ENGINE_TO_ROBOT_UNION)_send_helper.h
+k02: cpplilib $(ENGINE_TO_ROBOT_UNION)_switch_from_$(K02_START_TAG)_to_$(K02_END_TAG).def $(ENGINE_TO_ROBOT_UNION)_declarations.def $(ROBOT_TO_ENGINE_UNION)_send_helper.h $(ENGINE_TO_ROBOT_UNION)_send_helper.h
 
 esp: cpp $(ENGINE_TO_ROBOT_UNION)_declarations.def $(ROBOT_TO_ENGINE_UNION)_send_helper.h
 
