--- a/robot/syscon/syscon.uvprojx
+++ b/robot/syscon/syscon.uvprojx
@@ -68,9 +68,9 @@
             <nStopU2X>0</nStopU2X>
           </BeforeCompile>
           <BeforeMake>
-            <RunUserProg1>0</RunUserProg1>
+            <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name></UserProg1Name>
+            <UserProg1Name>bash -c "make -C ../ nrf"</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -369,7 +369,7 @@
               <MiscControls>-DROBOT41</MiscControls>
               <Define>NRF51,COZMO_ROBOT</Define>
               <Undefine></Undefine>
-              <IncludePath>./components/device;./components/drivers_nrf/hal;../include;.</IncludePath>
+              <IncludePath>./components/device;./components/drivers_nrf/hal;../include;.;../generated/clad/robot</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -491,6 +491,11 @@
               <FileName>startup_nrf51.s</FileName>
               <FileType>2</FileType>
               <FilePath>.\hal\startup_nrf51.s</FilePath>
+            </File>
+            <File>
+              <FileName>logging.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\hal\logging.cpp</FilePath>
             </File>
           </Files>
         </Group>
