--- a/robot/robot41.uvprojx
+++ b/robot/robot41.uvprojx
@@ -692,6 +692,11 @@
               <FileType>8</FileType>
               <FilePath>.\supervisor\src\version.cpp</FilePath>
             </File>
+            <File>
+              <FileName>backpackLightController.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\backpackLightController.cpp</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
