--- a/project/build-scripts/webots/webotsTests.cfg
+++ b/project/build-scripts/webots/webotsTests.cfg
@@ -21,5 +21,5 @@ world_file : testWorldBasicActions.wbt
 [CST_ActionRetry]
 world_file : testWorldActionRetry.wbt
 
-[CST_DockActions]
-world_file : testWorldBasicActions.wbt
+#[CST_DockActions]
+#world_file : testWorldBasicActions.wbt
